@@ -18,7 +18,6 @@ package org.gradle.api.internal.artifacts.repositories.cachemanager;
 import org.apache.ivy.core.cache.ArtifactOrigin;
 import org.apache.ivy.core.cache.CacheMetadataOptions;
 import org.apache.ivy.core.cache.ModuleDescriptorWriter;
-import org.apache.ivy.core.cache.RepositoryCacheManager;
 import org.apache.ivy.core.module.descriptor.Artifact;
 import org.apache.ivy.core.module.descriptor.DependencyDescriptor;
 import org.apache.ivy.core.module.descriptor.ModuleDescriptor;
@@ -37,9 +36,10 @@ import org.gradle.internal.UncheckedException;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URL;
 import java.text.ParseException;
 
-abstract class AbstractRepositoryCacheManager implements RepositoryCacheManager {
+abstract class AbstractRepositoryCacheManager implements RepositoryArtifactCache {
     protected final String name;
     private final ParserRegistry parserRegistry = new ParserRegistry();
 
@@ -77,7 +77,7 @@ abstract class AbstractRepositoryCacheManager implements RepositoryCacheManager 
             IvySettings ivySettings = IvyContextualiser.getIvyContext().getSettings();
             ParserSettings parserSettings = new ModuleScopedParserSettings(ivySettings, resolver, moduleRevisionId);
             ModuleDescriptorParser parser = parserRegistry.forResource(resource);
-            return parser.parseDescriptor(parserSettings, artifactFile.toURI().toURL(), resource, options.isValidate());
+            return parser.parseDescriptor(parserSettings, new URL(artifactFile.toURI().toASCIIString()), resource, options.isValidate());
         } catch (IOException e) {
             throw UncheckedException.throwAsUncheckedException(e);
         }
